decompiler/tests/snapshots/test_tool__x86_64_callconv__func098.snap
---
source: decompiler/tests/test_tool.rs
expression: out
---
func098 0x4012f6+5 (file 0x12f6)
          4012f6: 8a 44 24 14             mov al,[rsp+14h]
          4012fa: c3                      ret

function type: "func098" func (arg0 *void <TypeID(1v1)>,
                               arg1 *void <TypeID(1v1)>,
                               arg2 *void <TypeID(1v1)>,
                               arg3 small <TypeID(785v1)>,
                               arg4 small <TypeID(785v1)>) uint8_t <TypeID(789v1)>
0 warnings.


mil program = 
program  71 instrs
    0 r12: TypeID(2v1) <- Ancestral(AncestralName("stack_bottom"))
    1 r2: TypeID(2v1) <- Ancestral(AncestralName("CF"))
    2 r3: TypeID(2v1) <- Ancestral(AncestralName("PF"))
    3 r4: TypeID(2v1) <- Ancestral(AncestralName("AF"))
    4 r5: TypeID(2v1) <- Ancestral(AncestralName("ZF"))
    5 r6: TypeID(2v1) <- Ancestral(AncestralName("SF"))
    6 r7: TypeID(2v1) <- Ancestral(AncestralName("TF"))
    7 r8: TypeID(2v1) <- Ancestral(AncestralName("IF"))
    8 r9: TypeID(2v1) <- Ancestral(AncestralName("DF"))
    9 r10: TypeID(2v1) <- Ancestral(AncestralName("OF"))
   10 r11: TypeID(2v1) <- Ancestral(AncestralName("RBP"))
   11 r12: TypeID(2v1) <- Ancestral(AncestralName("RSP"))
   12 r13: TypeID(2v1) <- Ancestral(AncestralName("RIP"))
   13 r14: TypeID(2v1) <- Ancestral(AncestralName("RDI"))
   14 r15: TypeID(2v1) <- Ancestral(AncestralName("RSI"))
   15 r16: TypeID(2v1) <- Ancestral(AncestralName("RAX"))
   16 r17: TypeID(2v1) <- Ancestral(AncestralName("RBX"))
   17 r18: TypeID(2v1) <- Ancestral(AncestralName("RCX"))
   18 r19: TypeID(2v1) <- Ancestral(AncestralName("RDX"))
   19 r20: TypeID(2v1) <- Ancestral(AncestralName("R8"))
   20 r21: TypeID(2v1) <- Ancestral(AncestralName("R9"))
   21 r22: TypeID(2v1) <- Ancestral(AncestralName("R10"))
   22 r23: TypeID(2v1) <- Ancestral(AncestralName("R11"))
   23 r24: TypeID(2v1) <- Ancestral(AncestralName("R12"))
   24 r25: TypeID(2v1) <- Ancestral(AncestralName("R13"))
   25 r26: TypeID(2v1) <- Ancestral(AncestralName("R14"))
   26 r27: TypeID(2v1) <- Ancestral(AncestralName("R15"))
   27 r28: TypeID(2v1) <- Ancestral(AncestralName("ZMM0"))
   28 r29: TypeID(2v1) <- Ancestral(AncestralName("ZMM1"))
   29 r30: TypeID(2v1) <- Ancestral(AncestralName("ZMM2"))
   30 r31: TypeID(2v1) <- Ancestral(AncestralName("ZMM3"))
   31 r32: TypeID(2v1) <- Ancestral(AncestralName("ZMM4"))
   32 r33: TypeID(2v1) <- Ancestral(AncestralName("ZMM5"))
   33 r34: TypeID(2v1) <- Ancestral(AncestralName("ZMM6"))
   34 r35: TypeID(2v1) <- Ancestral(AncestralName("ZMM7"))
   35 r36: TypeID(2v1) <- Ancestral(AncestralName("ZMM8"))
   36 r37: TypeID(2v1) <- Ancestral(AncestralName("ZMM9"))
   37 r38: TypeID(2v1) <- Ancestral(AncestralName("ZMM10"))
   38 r39: TypeID(2v1) <- Ancestral(AncestralName("ZMM11"))
   39 r40: TypeID(2v1) <- Ancestral(AncestralName("ZMM12"))
   40 r41: TypeID(2v1) <- Ancestral(AncestralName("ZMM13"))
   41 r42: TypeID(2v1) <- Ancestral(AncestralName("ZMM14"))
   42 r43: TypeID(2v1) <- Ancestral(AncestralName("ZMM15"))
   43 r45: TypeID(2v1) <- Ancestral(AncestralName("arg0"))
   44 r14: TypeID(2v1) <- Get(r45)
   45 r46: TypeID(2v1) <- Ancestral(AncestralName("arg1"))
   46 r15: TypeID(2v1) <- Get(r46)
   47 r47: TypeID(2v1) <- Ancestral(AncestralName("arg2"))
   48 r19: TypeID(2v1) <- Get(r47)
   49 r48: TypeID(2v1) <- Ancestral(AncestralName("arg3"))
   50 r49: TypeID(2v1) <- Part { src: r48, offset: 0, size: 8 }
   51 r18: TypeID(2v1) <- Get(r49)
   52 r50: TypeID(2v1) <- Part { src: r48, offset: 8, size: 8 }
   53 r20: TypeID(2v1) <- Get(r50)
   54 r51: TypeID(2v1) <- Ancestral(AncestralName("arg4"))
   55 r53: TypeID(2v1) <- Part { src: r51, offset: 0, size: 8 }
   56 r52: TypeID(2v1) <- ArithK(Add, r12, 8)
   57 r52: TypeID(2v1) <- StoreMem { addr: r52, value: r53 }
   58 r53: TypeID(2v1) <- Part { src: r51, offset: 8, size: 8 }
   59 r52: TypeID(2v1) <- ArithK(Add, r12, 16)
   60 r52: TypeID(2v1) <- StoreMem { addr: r52, value: r53 }
0x4012f6:
   61 r46: TypeID(2v1) <- Const { value: 20, size: 8 }
   62 r46: TypeID(2v1) <- Arith(Add, r46, r12)
   63 r45: TypeID(2v1) <- LoadMem { addr: r46, size: 1 }
   64 r47: TypeID(2v1) <- Part { src: r16, offset: 1, size: 7 }
   65 r16: TypeID(2v1) <- Concat { lo: r45, hi: r47 }
0x4012fa:
   66 r45: TypeID(2v1) <- Void
   67 r45: TypeID(2v1) <- Concat { lo: r45, hi: r16 }
   68 r45: TypeID(2v1) <- Part { src: r45, offset: 0, size: 1 }
   69 r47: TypeID(2v1) <- SetReturnValue(r45)
   70 r47: TypeID(2v1) <- Control(Ret)


ssa pre-xform:
ssa program  71 instrs
.B0:    ;;  → Always(Return).
  (  3)  r11: ? <- Ancestral(AncestralName("RSP"))
         r15: ? <- Ancestral(AncestralName("RAX"))
  (  2)  r54: ? <- Ancestral(AncestralName("arg4"))
         r55: ? <- Part { src: r54, offset: 0, size: 8 }
         r56: ? <- ArithK(Add, r11, 8)
         r57: ? <- StoreMem { addr: r56, value: r55 }
         r58: ? <- Part { src: r54, offset: 8, size: 8 }
         r59: ? <- ArithK(Add, r11, 16)
         r60: ? <- StoreMem { addr: r59, value: r58 }
         r61: ? <- Const { value: 20, size: 8 }
         r62: ? <- Arith(Add, r61, r11)
         r63: ? <- LoadMem { addr: r62, size: 1 }
         r64: ? <- Part { src: r15, offset: 1, size: 7 }
         r65: ? <- Concat { lo: r63, hi: r64 }
         r67: ? <- Concat { lo: r66, hi: r65 }
         r68: ? <- Part { src: r67, offset: 0, size: 1 }
         r69: ? <- SetReturnValue(r68)


cfg:
  entry: BlockID(0)
  BlockID(0) -> Always(Return) [r11, r15, r54, r55, r56, r57, r58, r59, r60, r61, r62, r63, r64, r65, r66, r67, r68, r69]
  domtree:
    BlockID(0)

ssa post-xform:
ssa program  76 instrs
.B0:    ;;  → Always(Return).
  (  2)  r11: ? <- Ancestral(AncestralName("RSP"))
  (  3)  r54: ? <- Ancestral(AncestralName("arg4"))
         r55: ? <- Part { src: r54, offset: 0, size: 8 }
         r56: ? <- ArithK(Add, r11, 8)
         r57: ? <- StoreMem { addr: r56, value: r55 }
         r58: ? <- Part { src: r54, offset: 8, size: 8 }
         r59: ? <- ArithK(Add, r11, 16)
         r60: ? <- StoreMem { addr: r59, value: r58 }
         r72: ? <- Part { src: r54, offset: 12, size: 1 }
         r69: ? <- SetReturnValue(r72)



T0: {
  [pre:RSP + 8]:* := pre:arg4[8 .. 0];
  [pre:RSP + 16]:* := pre:arg4[16 .. 8];
  ;
  return pre:arg4[13 .. 12]
}
