decompiler/tests/snapshots/test_tool__x86_64_callconv__func101.snap
---
source: decompiler/tests/test_tool.rs
expression: out
---
func101 0x4012fd+4 (file 0x12fd)
          4012fd: 0f 28 c1                movaps xmm0,xmm1
          401300: c3                      ret

function type: "func101" func (arg0 *void <TypeID(1v1)>,
                               arg1 *void <TypeID(1v1)>,
                               arg2 *void <TypeID(1v1)>,
                               arg3 small <TypeID(784v1)>,
                               arg4 small_xmms <TypeID(791v1)>) double <TypeID(783v1)>
0 warnings.


mil program = 
program  92 instrs
                 0 r12 <- Ancestral(AncestralName("stack_bottom"))
                 1 r2 <- Ancestral(AncestralName("CF"))
                 2 r3 <- Ancestral(AncestralName("PF"))
                 3 r4 <- Ancestral(AncestralName("AF"))
                 4 r5 <- Ancestral(AncestralName("ZF"))
                 5 r6 <- Ancestral(AncestralName("SF"))
                 6 r7 <- Ancestral(AncestralName("TF"))
                 7 r8 <- Ancestral(AncestralName("IF"))
                 8 r9 <- Ancestral(AncestralName("DF"))
                 9 r10 <- Ancestral(AncestralName("OF"))
                10 r11 <- Ancestral(AncestralName("RBP"))
                11 r12 <- Ancestral(AncestralName("RSP"))
                12 r13 <- Ancestral(AncestralName("RIP"))
                13 r14 <- Ancestral(AncestralName("RDI"))
                14 r15 <- Ancestral(AncestralName("RSI"))
                15 r16 <- Ancestral(AncestralName("RAX"))
                16 r17 <- Ancestral(AncestralName("RBX"))
                17 r18 <- Ancestral(AncestralName("RCX"))
                18 r19 <- Ancestral(AncestralName("RDX"))
                19 r20 <- Ancestral(AncestralName("R8"))
                20 r21 <- Ancestral(AncestralName("R9"))
                21 r22 <- Ancestral(AncestralName("R10"))
                22 r23 <- Ancestral(AncestralName("R11"))
                23 r24 <- Ancestral(AncestralName("R12"))
                24 r25 <- Ancestral(AncestralName("R13"))
                25 r26 <- Ancestral(AncestralName("R14"))
                26 r27 <- Ancestral(AncestralName("R15"))
                27 r28 <- Ancestral(AncestralName("ZMM0"))
                28 r29 <- Ancestral(AncestralName("ZMM1"))
                29 r30 <- Ancestral(AncestralName("ZMM2"))
                30 r31 <- Ancestral(AncestralName("ZMM3"))
                31 r32 <- Ancestral(AncestralName("ZMM4"))
                32 r33 <- Ancestral(AncestralName("ZMM5"))
                33 r34 <- Ancestral(AncestralName("ZMM6"))
                34 r35 <- Ancestral(AncestralName("ZMM7"))
                35 r36 <- Ancestral(AncestralName("ZMM8"))
                36 r37 <- Ancestral(AncestralName("ZMM9"))
                37 r38 <- Ancestral(AncestralName("ZMM10"))
                38 r39 <- Ancestral(AncestralName("ZMM11"))
                39 r40 <- Ancestral(AncestralName("ZMM12"))
                40 r41 <- Ancestral(AncestralName("ZMM13"))
                41 r42 <- Ancestral(AncestralName("ZMM14"))
                42 r43 <- Ancestral(AncestralName("ZMM15"))
                43 r44 <- Ancestral(AncestralName("memory"))
                44 r45 <- Undefined
                45 r46 <- Undefined
                46 r47 <- Undefined
                47 r48 <- Undefined
                48 r49 <- Undefined
                49 r50 <- Undefined
                50 r51 <- Undefined
                51 r52 <- Undefined
                52 r53 <- Undefined
                53 r54 <- Undefined
                54 r55 <- Undefined
                55 r56 <- Undefined
                56 r57 <- Undefined
                57 r58 <- Undefined
                58 r59 <- Undefined
                59 r60 <- Undefined
                60 r61 <- Undefined
                61 r62 <- Undefined
                62 r63 <- Undefined
                63 r64 <- Undefined
                64 r65 <- Undefined
                65 r45 <- Ancestral(AncestralName("arg0"))
                66 r15 <- Get(r45)
                67 r46 <- Ancestral(AncestralName("arg1"))
                68 r19 <- Get(r46)
                69 r47 <- Ancestral(AncestralName("arg2"))
                70 r18 <- Get(r47)
                71 r48 <- Ancestral(AncestralName("arg3"))
                72 r49 <- Part { src: r48, offset: 0, size: 8 }
                73 r20 <- Get(r49)
                74 r50 <- Part { src: r48, offset: 8, size: 8 }
                75 r21 <- Get(r50)
                76 r51 <- Ancestral(AncestralName("arg4"))
                77 r52 <- Part { src: r51, offset: 0, size: 8 }
                78 r53 <- Part { src: r28, offset: 8, size: 56 }
                79 r28 <- Concat { lo: r52, hi: r53 }
                80 r54 <- Part { src: r51, offset: 8, size: 8 }
                81 r55 <- Part { src: r29, offset: 8, size: 56 }
                82 r29 <- Concat { lo: r54, hi: r55 }
0x4012fd:
                83 r46 <- Part { src: r29, offset: 0, size: 16 }
                84 r47 <- Part { src: r28, offset: 16, size: 48 }
                85 r28 <- Concat { lo: r46, hi: r47 }
0x401300:
                86 r45 <- Void
                87 r46 <- Part { src: r28, offset: 0, size: 8 }
                88 r45 <- Concat { lo: r45, hi: r46 }
                89 r45 <- Part { src: r45, offset: 0, size: 8 }
                90 r47 <- SetReturnValue(r45)
                91 r47 <- Control(Ret)


ssa pre-xform:
ssa program  92 instrs
.B0:    ;;  → Always(Return).
         r27 <- Ancestral(AncestralName("ZMM0"))
         r28 <- Ancestral(AncestralName("ZMM1"))
  (  2)  r76 <- Ancestral(AncestralName("arg4"))
         r77 <- Part { src: r76, offset: 0, size: 8 }
         r78 <- Part { src: r27, offset: 8, size: 56 }
         r79 <- Concat { lo: r77, hi: r78 }
         r80 <- Part { src: r76, offset: 8, size: 8 }
         r81 <- Part { src: r28, offset: 8, size: 56 }
         r82 <- Concat { lo: r80, hi: r81 }
         r83 <- Part { src: r82, offset: 0, size: 16 }
         r84 <- Part { src: r79, offset: 16, size: 48 }
         r85 <- Concat { lo: r83, hi: r84 }
         r87 <- Part { src: r85, offset: 0, size: 8 }
         r88 <- Concat { lo: r86, hi: r87 }
         r89 <- Part { src: r88, offset: 0, size: 8 }
         r90 <- SetReturnValue(r89)


cfg:
  entry: BlockID(0)
  BlockID(0) -> Always(Return) [r27, r28, r76, r77, r78, r79, r80, r81, r82, r83, r84, r85, r86, r87, r88, r89, r90]
  domtree:
    BlockID(0)

ssa post-xform:
ssa program  92 instrs
.B0:    ;;  → Always(Return).
         r76 <- Ancestral(AncestralName("arg4"))
         r89 <- Part { src: r76, offset: 8, size: 8 }
         r90 <- SetReturnValue(r89)



T0: {
  ;
  return pre:arg4[16 .. 8]
}
